--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   geolocator: ^9.0.2
+  google_maps_flutter: ^2.3.1
 
 dev_dependencies:
   flutter_test:
